--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^5.11.4",
     "babel-plugin-module-resolver": "^4.1.0",
     "expo": "~40.0.0",
     "expo-splash-screen": "~0.8.0",
