--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@react-navigation/drawer": "^5.11.4",
     "babel-plugin-module-resolver": "^4.1.0",
     "expo": "~40.0.0",
+    "expo-font": "~8.4.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
