--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/core": "^7.0.0",
     "babel-jest": "~25.2.6",
     "jest": "~25.2.6",
+    "lint": "^0.7.0",
     "react-test-renderer": "~16.13.1",
     "vue-native-scripts": "0.2.0"
   },
