--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslintrc.js"
   },
   "dependencies": {
+    "@react-native-community/picker": "^1.8.1",
     "@react-navigation/drawer": "^5.11.4",
     "babel-plugin-module-resolver": "^4.1.0",
     "expo": "~40.0.0",
