--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,6 +126,19 @@ def enableHermes = project.ext.react.get("enableHermes", false);
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
+    packagingOptions {
+    exclude 'META-INF/DEPENDENCIES'
+    exclude 'META-INF/LICENSE'
+    exclude 'META-INF/LICENSE.txt'
+    exclude 'META-INF/license.txt'
+    exclude 'META-INF/NOTICE'
+    exclude 'META-INF/NOTICE.txt'
+    exclude 'META-INF/notice.txt'
+    exclude 'META-INF/ASL2.0'
+    exclude 'META-INF/plexus/components.xml'
+    exclude 'plugin.xml'
+}
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -184,6 +197,37 @@ android {
 }
 
 dependencies {
+    repositories {
+        flatDir{
+            dirs 'aar'
+        }
+    }
+    implementation name: 'SamsungBlockchainSDK-developers_release_1.1.00', ext: 'aar'
+    implementation name:'KeystoreSDK-release_v1.4.1', ext: 'aar'
+    // network
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    
+    // web3j
+    implementation 'org.web3j:core:4.2.0-android'
+    
+    // for check developer mode
+    implementation 'org.ini4j:ini4j:0.5.4'
+    
+    // dagger
+    implementation 'com.google.dagger:dagger:2.21'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.21'
+        
+    implementation "io.reactivex.rxjava2:rxjava:2.2.8"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+        
+    // Protobuf
+    implementation 'com.google.protobuf:protobuf-java:3.9.1'
+    implementation 'com.google.protobuf:protobuf-gradle-plugin:0.8.10'
+    annotationProcessor "org.eclipse.sisu:org.eclipse.sisu.inject:0.0.0.M5"
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
