--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslintrc.js"
   },
   "dependencies": {
+    "@makerdao/currency": "^0.9.9",
     "@react-native-community/picker": "^1.8.1",
     "@react-navigation/drawer": "^5.11.4",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -26,6 +27,7 @@
     "react-native-screens": "~2.15.0",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12",
+    "tokamak-staking-lib": "0.0.12",
     "vue-native-core": "0.2.0",
     "vue-native-helper": "0.2.0",
     "vue-native-router": "^0.2.0",
