--- a/ios/Podfile
+++ b/ios/Podfile
@@ -20,4 +20,6 @@ target 'tokamakstakingapp' do
   #    flipper_post_install(installer)
   #  end
   # end
+  pod 'react-native-randombytes', :path => '../node_modules/react-native-randombytes'
+
 end
