--- a/package.json
+++ b/package.json
@@ -11,23 +11,51 @@
     "@makerdao/currency": "^0.9.9",
     "@react-native-community/picker": "^1.8.1",
     "@react-navigation/drawer": "^5.11.4",
+    "@tradle/react-native-http": "^2.0.1",
+    "assert": "^1.5.0",
+    "axios": "^0.21.1",
     "babel-plugin-module-resolver": "^4.1.0",
+    "browserify-zlib": "^0.1.4",
+    "buffer": "^4.9.2",
+    "console-browserify": "^1.2.0",
+    "constants-browserify": "^1.0.0",
+    "dns.js": "^1.0.1",
+    "domain-browser": "^1.2.0",
+    "events": "^1.1.1",
     "expo": "~40.0.0",
     "expo-font": "~8.4.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
+    "https-browserify": "0.0.1",
     "native-base": "^2.13.15",
+    "numeral": "^2.0.6",
+    "path-browserify": "0.0.0",
+    "punycode": "^1.4.1",
+    "querystring-es3": "^0.2.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-crypto": "^2.2.0",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-level-fs": "^3.0.1",
+    "react-native-os": "^1.2.6",
     "react-native-paper": "^4.5.0",
+    "react-native-randombytes": "^3.6.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.15.0",
+    "react-native-tcp": "^3.3.2",
+    "react-native-udp": "^2.7.0",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12",
+    "readable-stream": "^1.0.33",
+    "stream-browserify": "^1.0.0",
+    "string_decoder": "^0.10.31",
+    "timers-browserify": "^1.4.2",
     "tokamak-staking-lib": "0.0.12",
+    "tty-browserify": "0.0.0",
+    "url": "^0.10.3",
+    "vm-browserify": "0.0.4",
     "vue-native-core": "0.2.0",
     "vue-native-helper": "0.2.0",
     "vue-native-router": "^0.2.0",
@@ -40,9 +68,62 @@
     "jest": "~25.2.6",
     "lint": "^0.7.0",
     "react-test-renderer": "~16.13.1",
+    "rn-nodeify": "github:tradle/rn-nodeify",
     "vue-native-scripts": "0.2.0"
   },
   "private": true,
   "name": "tokamak-staking-app",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "react-native": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  },
+  "browser": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  }
 }
