--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "assert": "^1.5.0",
     "axios": "^0.21.1",
     "babel-plugin-module-resolver": "^4.1.0",
+    "big-integer": "^1.6.48",
+    "bignumber": "^1.1.0",
     "browserify-zlib": "^0.1.4",
     "buffer": "^4.9.2",
     "console-browserify": "^1.2.0",
