front-end integration

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "buffer": "^4.9.2",
     "console-browserify": "^1.2.0",
     "constants-browserify": "^1.0.0",
+    "crypto-js": "3.1.9-1",
     "dns.js": "^1.0.1",
     "domain-browser": "^1.2.0",
     "events": "^1.1.1",
@@ -51,6 +52,7 @@
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12",
     "readable-stream": "^1.0.33",
+    "stream": "0.0.2",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
     "timers-browserify": "^1.4.2",
