--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslintrc.js"
   },
   "dependencies": {
+    "@react-native-community/blur": "^3.6.0",
     "@react-native-community/picker": "^1.8.1",
     "@react-navigation/drawer": "^5.11.4",
     "babel-plugin-module-resolver": "^4.1.0",
