--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "domain-browser": "^1.2.0",
     "events": "^1.1.1",
     "expo": "~40.0.0",
-    "expo-font": "~8.4.0", 
+    "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
     "https-browserify": "0.0.1",
@@ -42,6 +42,7 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
+    "react-native-paper": "^4.7.1",
     "react-native-randombytes": "^3.6.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.15.0",
