--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-udp": "^2.7.0",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.2.3",
     "readable-stream": "^1.0.33",
     "stream": "0.0.2",
     "stream-browserify": "^1.0.0",
