--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@makerdao/currency": "^0.9.9",
+    "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/picker": "^1.8.1",
     "@react-navigation/drawer": "^5.11.4",
     "@tradle/react-native-http": "^2.0.1",
